--- a/manifest.json
+++ b/manifest.json
@@ -1,14 +1,19 @@
 {
   "manifest_version": 2,
 
-  "name": "Modify CSS and HTML",
+  "name": "Strava Perf Table Extension",
   "version": "0.1.0",
-  "description": "Lateral blog post demo extension",
+  "description": "Show a condensed Strava performance table",
 
   "content_scripts": [{
     "css": ["styles.css"],
     "js": ["content.js"],
-    "matches": ["https://blog.lateral.io/*"]
-  }]
+    "matches": ["https://www.strava.com/activities/*"]
+  }],
+  
+  "permissions": [
+      "tabs",
+      "https://www.strava.com/*"
+  ]
 
 }
